unpackaged/main/default/objects/Account/fields/AdyenField__c.field-meta.xml
<CustomField>
    <fullName>AdyenField__c</fullName>
    <label>AdyenField</label>
    <type>Date</type>
</CustomField>