unpackaged/main/default/objects/Account/fields/AirTestField__c.field-meta.xml
<CustomField>
    <fullName>AirTestField__c</fullName>
    <label>AirTestField</label>
    <type>Phone</type>
</CustomField>