unpackaged/main/default/objects/Account/fields/ASPCATest__c.field-meta.xml
<CustomField>
    <fullName>ASPCATest__c</fullName>
    <label>ASPCATest</label>
    <length>20</length>
    <type>Text</type>
</CustomField>