unpackaged/main/default/objects/Account/fields/Bruntwood_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Bruntwood_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bruntwood checkbox</label>
    <type>Checkbox</type>
</CustomField>