unpackaged/main/default/objects/Account/fields/DemoTestGeorge__c.field-meta.xml
<CustomField>
    <fullName>DemoTestGeorge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DemoTestGeorge</label>
    <type>Checkbox</type>
</CustomField>