unpackaged/main/default/objects/Account/fields/Digitall_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Digitall_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digitall Checkbox</label>
    <type>Checkbox</type>
</CustomField>