unpackaged/main/default/objects/Account/fields/DogsCheckbox__c.field-meta.xml
<CustomField>
    <fullName>DogsCheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DogsCheckbox</label>
    <type>Checkbox</type>
</CustomField>