unpackaged/main/default/objects/Account/fields/ebay_test_text_box__c.field-meta.xml
<CustomField>
    <fullName>ebay_test_text_box__c</fullName>
    <label>ebay test text box</label>
    <length>20</length>
    <type>Text</type>
</CustomField>