unpackaged/main/default/objects/Account/fields/George_Text_Field__c.field-meta.xml
<CustomField>
    <fullName>George_Text_Field__c</fullName>
    <label>George Text Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>