unpackaged/main/default/objects/Account/fields/Georges_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Georges_Date_Field__c</fullName>
    <label>Georges Date Field</label>
    <type>Date</type>
</CustomField>