unpackaged/main/default/objects/Account/fields/GeorgeTestField__c.field-meta.xml
<CustomField>
    <fullName>GeorgeTestField__c</fullName>
    <label>GeorgeTestField</label>
    <type>Phone</type>
</CustomField>