unpackaged/main/default/objects/Account/fields/GESACheckbox__c.field-meta.xml
<CustomField>
    <fullName>GESACheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GESACheckbox</label>
    <type>Checkbox</type>
</CustomField>