unpackaged/main/default/objects/Account/fields/InsideTrackField__c.field-meta.xml
<CustomField>
    <fullName>InsideTrackField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InsideTrackField</label>
    <type>Checkbox</type>
</CustomField>