unpackaged/main/default/objects/Account/fields/MccainCheckbox__c.field-meta.xml
<CustomField>
    <fullName>MccainCheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MccainCheckbox</label>
    <type>Checkbox</type>
</CustomField>