unpackaged/main/default/objects/Account/fields/MediaCheckbox__c.field-meta.xml
<CustomField>
    <fullName>MediaCheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MediaCheckbox</label>
    <type>Checkbox</type>
</CustomField>