unpackaged/main/default/objects/Account/fields/MewsTextBox__c.field-meta.xml
<CustomField>
    <fullName>MewsTextBox__c</fullName>
    <label>MewsTextBox</label>
    <length>20</length>
    <type>Text</type>
</CustomField>