unpackaged/main/default/objects/Account/fields/Pipeline_Text_Field__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Text_Field__c</fullName>
    <label>Pipeline Text Field</label>
    <length>20</length>
    <type>Text</type>
</CustomField>