unpackaged/main/default/objects/Account/fields/Test_Checkbox_One__c.field-meta.xml
<CustomField>
    <fullName>Test_Checkbox_One__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Checkbox One</label>
    <type>Checkbox</type>
</CustomField>