unpackaged/main/default/objects/Account/fields/Test_Checkbox_Two__c.field-meta.xml
<CustomField>
    <fullName>Test_Checkbox_Two__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Checkbox Two</label>
    <type>Checkbox</type>
</CustomField>