unpackaged/main/default/objects/Account/fields/TestPhoneField__c.field-meta.xml
<CustomField>
    <fullName>TestPhoneField__c</fullName>
    <label>TestPhoneField</label>
    <type>Phone</type>
</CustomField>